--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <body>
         <h1>SNAKE GAME!</h1>
         <canvas id="snake" width="512" height="512"></canvas>
+    <footer>
+        <div>
+            <p>App desenvolvido por <a href="https://github.com/AlineMilene" target="_blank" rel="noreferrer">Aline Milene</a></p>
+            <p>Evento promovido pela escola Digital Innovation One: <a href="https://github.com/digitalinnovationone" target="_blank" rel="noreferrer">Aline Milene</a></p>
+        </div>
+    </footer>
     </body>
 </html>
